# drf-api-permissions-postgres

./: README.md  db.sqlite3  pyproject.toml
basket/: settings.py  urls.py
